fix: added z-index to for spinner

--- a/src/app/components/spinner/spinner.component.scss
+++ b/src/app/components/spinner/spinner.component.scss
@@ -4,6 +4,7 @@
   opacity: 0.4;
   width: 100%;
   height: 100%;
+  z-index: 10;
 
   &-wrapper {
     top: calc(50% - 100px);
